@@ -1,5 +1,10 @@
 2008-12-28  Mirco Bauer <meebey@meebey.net> 
 
+	* Protocols/Irc/IrcProtocolManager.cs: Don't log ThreadAbortException as
+	  error, as we expect them.
+
+2008-12-28  Mirco Bauer <meebey@meebey.net> 
+
 	* Makefile.am: Replaced hardcoded gmcs calls with configure variable.
 
 2008-12-28  Mirco Bauer <meebey@meebey.net> 
